<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.freedom.lab2.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        style="@style/my_style"
        android:text="@string/title"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/textView"/>

    <ImageView
        android:id="@+id/imageView"
        style="@style/my_style"
        app:srcCompat="@mipmap/sysu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0"
        >

        <EditText
            android:id="@+id/textid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userid_hit"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginRight="20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <EditText
            android:id="@+id/textpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hit"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
        android:id="@+id/radioGroup">

        <RadioButton
            android:id="@+id/radioButton1"
            style="@style/my_style"
            android:checked="true"
            android:text="@string/radio_student" />

        <RadioButton
            android:id="@+id/radioButton2"
            style="@style/my_style"
            android:text="@string/radio_teacher"
            android:layout_marginLeft="10dp" />

    </RadioGroup>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="192dp" />

    <Button
        android:id="@+id/button"
        style="@style/my_style"
        android:text="@string/button_login"
        android:textColor="@color/white"
        android:background="@drawable/buttonstyle"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        android:layout_marginRight="5dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginEnd="5dp" />

    <Button
        android:id="@+id/button2"
        style="@style/my_style"
        android:text="@string/button_register"
        android:textColor="@color/white"
        android:background="@drawable/buttonstyle"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline" />

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_content"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">
    </android.support.design.widget.CoordinatorLayout>

</android.support.constraint.ConstraintLayout>
